new-vector-whitespace.user.css
/* ==UserStyle==
@name        Wikim V.2022 whitespace
@namespace   StylishThemes
@version     1.0.33
@homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
@updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
@license     CC-BY-SA-4.0
@author      quiddity-wp
==/UserStyle== */
@-moz-document domain("wikipedia.org"),
domain("meta.wikimedia.org"),
domain("office.wikimedia.org"),
domain("commons.wikimedia.org"),
domain("species.wikimedia.org"),
domain("outreach.wikimedia.org"),
domain("wikimania.wikimedia.org"),
domain("foundation.wikimedia.org"),
domain("wikitech.wikimedia.org"),
domain("wiktionary.org"),
domain("mediawiki.org"),
domain("wikisource.org"),
domain("wikivoyage.org"),
domain("wikibooks.org"),
domain("wikinews.org"),
domain("wikiversity.org"),
domain("wikiquote.org"),
domain("wikidata.org"),
domain("beta.wmflabs.org"),
domain("wikifunctions.org") {
  /* NOTE: this assumes you are using NEW VECTOR ([[mw:Desktop Improvements]] beta) */
  
/* Remove header whitespace */
  .mw-header {
    margin: 0 !important; 
    padding-top: 0;
    height: 55px !important;
  }
  
/* Nudge sidebar-button up into corner */
  #mw-sidebar-button {
    margin-left: -1px; 
    margin-top: -11px; 
    border: none;
  }
  
/* ToC tweaks*/
  .sidebar-toc {
    padding-left: 17px; 
    margin: 0 !important; 
    max-height: 100vh;
  }
  .vector-toc-enabled .mw-sidebar, .vector-toc-enabled .sidebar-toc {
    width: 14em;
  }
  .sidebar-toc .sidebar-toc-text {
    padding-right: 0
  }
  .sidebar-toc-contents {
    width: 12.5em
  }
  @media screen and (min-width: 1200px) {
    .mw-sidebar, .sidebar-toc, .sidebar-toc::after {
      width: 14em;
      margin-left: 0.75em;
    }
  }
  
/* Sidebar tweaks */
  #mw-panel {
    padding: 0; 
    width: 189px;
    margin: 0;
  }
  @media screen and (max-width: 999px) {
    .mw-checkbox-hack-checkbox:checked ~ .mw-workspace-container #mw-panel {
      border: 1px lightgray solid
    }
  }
  
/* Remove whitespace at edges */
  .mw-page-container {
    padding: 1px;
  }
  .mw-portlet .mw-portlet-navigation .vector-menu .vector-menu-portal .portal {
    margin-left: 5px;
  }
  .vector-sticky-header {
    padding: 0;
  }
  
/* Reduce gap above Page-title */
  .vector-layout-grid .mw-page-container-inner {
    row-gap: 0;
  }
  
/* Remove the grid gutter */
  .vector-layout-grid .mw-page-container-inner {
    grid-template: 55px min-content 1fr min-content / 220px 15px minmax(0,1fr);
    grid-template-areas: 'header header header' 'sidebar gutter content' 'toc gutter content' 'footer footer footer'
  }
  
/* Shorten the inter-languages buttons */
  /* 1. Page-top button */
  #p-lang-btn-sticky-header {
    max-width: 71px; 
    overflow: clip; 
    margin-right: 25px;
  }
  #p-lang-btn-sticky-header::after {
    display: none;
  }
  /* 2. Sticky-header button */
  #p-lang-btn-label {
    max-width: 100px !important; 
    overflow: clip;
  }
  
/* Remove empty space at page-bottom */
  .mw-footer-container {
    padding-bottom: 0 !important;
  }
}

